<resources>
    <string name="app_name">Trail Camera</string>
    <string name="m2_parse_error_msg">Failed to parse data</string>
    <string name="m3_bad_network_msg">Internet problem</string>
    <string name="m4_connect_error_msg">Connection error</string>
    <string name="m5_connect_timeout_msg">Connection time out</string>
    <string name="m6_other_msg">Unknown mistake</string>
    <string name="m1_login">Log In</string>
    <string name="m2_register">Register</string>
    <string name="m3_forget_password">Forget password</string>
    <string name="m4_demo">Demo</string>
    <string name="m5_submmit">SUBMIT</string>
    <string name="m6_add_account">ADD ACCOUNT</string>
    <string name="m7_add_camera">ADD CAMERA</string>
    <string name="m8_find_imei">To find your IMEl number for your camera, first switch the camera into TEST and wait for IMEl to display.</string>
    <string name="m9_imei_num">IMEI Number</string>
    <string name="m10_complete">COMPLETE</string>
    <string name="m11_find_bar">Can\'t Find Barcode? Enter Yourself.</string>
    <string name="m12_skip">Skip</string>
    <string name="m13_filter">FILTER</string>
    <string name="m14_photo">Photo</string>
    <string name="m15_all">All</string>
    <string name="m16_hd">HD</string>
    <string name="m17_date">Date</string>
    <string name="m18_temp">Temperature</string>
    <string name="m19_temp">Lunar phase</string>
    <string name="m20_sliding">Swipe for previous/next</string>
    <string name="m21_collection">collection</string>
    <string name="m22_delete">Delete</string>
    <string name="m23_share">Share</string>
    <string name="m24_download">High Resolution Download</string>
    <string name="m25_day">Day</string>
    <string name="m26_week">Week</string>
    <string name="m27_month">Month</string>
    <string name="m28_year">Year</string>
    <string name="m29_nearest_weather">Nearest Weather Station:Lake Bridgeport, Texas</string>
    <string name="m30_reset_tracking_history">Reset Tracking History</string>
    <string name="m31_matthew">MATTHEW</string>
    <string name="m32_certified">Certified</string>
    <string name="m33_bank_card">Bank Card</string>
    <string name="m34_integration">Integration</string>
    <string name="m35_coupon">Coupon</string>
    <string name="m36_service">Service</string>
    <string name="m37_select_camera">Select A camera to manage</string>
    <string name="m38_change">Change</string>
    <string name="m39_suspend">Suspend</string>
    <string name="m40_remove">Remove</string>
    <string name="m41_back">Back</string>
    <string name="m42_nomessage">No message to you!</string>
    <string name="m43_custom_service">CUSTOMER SERVICEC</string>
    <string name="m44_ask_questions">FREQUENTLY ASKED QUESTIONS</string>
    <string name="m45_mailing_information">MAILING INFORMATION</string>
    <string name="m46_hlfha">Alfha</string>
    <string name="m47_state">State</string>
    <string name="m48_Testing">Testing</string>
    <string name="m49_somewhere_on_earth">Somewhere on earth</string>
    <string name="m50_address2">Address2</string>
    <string name="m51_Hoolywood">Hoolywood</string>
    <string name="m52_cali">CA-Cali…</string>
    <string name="m53_next">NEXT</string>
    <string name="m54_change_password">Change Password</string>
    <string name="m55_determine">Determine</string>
    <string name="m56_home">Home</string>
    <string name="m57_nearby">Nearby</string>
    <string name="m58_user">User</string>
    <string name="m59_username">Username</string>
    <string name="m60_email_address">Email Address</string>
    <string name="m61_password">Password</string>
    <string name="m62_confirm_password">Enter the password again</string>
    <string name="m63_username_cannot_empty">Username can not be empty</string>
    <string name="m63_password_cannot_empty">Password can not be empty</string>
    <string name="m64_imei_cannot_empty">IMEI can not be empty</string>
    <string name="m65_camera_of_garden">CAMERA OF GARDEN</string>
    <string name="m66_good">Good</string>
    <string name="m67_normal">Normal</string>
    <string name="m68_weak">Weak</string>
    <string name="m69_offline">Off-line</string>
    <string name="m70_Signal">Signal</string>
    <string name="m71_bat">battery</string>
    <string name="m72_sd">sdcard</string>
    <string name="m73_map">Map</string>
    <string name="m74_tracker">Tracker</string>
    <string name="m75_steup">Setup</string>
    <string name="m76_photos">Photos/Videos</string>
    <string name="m77_all_camera">All Camera</string>
    <string name="m78_my">My</string>
    <string name="m79_plans">Plans</string>
    <string name="m80_billing_history">Billing History</string>
    <string name="m81_Message">Message</string>
    <string name="m82_account">Account</string>
    <string name="m83_Support">Support</string>
    <string name="m84_sign_out">Log Out</string>
    <string name="m85_loading">Loading</string>
    <string name="m86_fail">Fail</string>
    <string name="m87_no_more_data">No more data</string>
    <string name="m88_video">VIDEO</string>
    <string name="m89_start">START</string>
    <string name="m90_end">END</string>
    <string name="m91_time">Time</string>
    <string name="m92_am">AM</string>
    <string name="m93_pm">PM</string>
    <string name="m94_favorites">Favorites</string>
    <string name="m95_f">(℉)</string>
    <string name="m96_c">(℃)</string>
    <string name="m97_to">to</string>
    <string name="m98_reset">Reset</string>
    <string name="m99_apply">Apply</string>
    <string name="m100_total">Total</string>
    <string name="m101_photo_tracker">Photo Tracker</string>
    <string name="m102_camera_stepup">Camera Setup</string>
    <string name="m103_capture_mode">Capture Mode</string>
    <string name="m104_photo_resolution">Photo Resolution</string>
    <string name="m105_photo_upload_resolution">Photo Upload Resolution </string>
    <string name="m106_burst_shot">Burst Shot</string>
    <string name="m107_burst_interval">Burst Interval</string>
    <string name="m108_video_resolution">Video Resolution</string>
    <string name="m109_video_length">Video Length</string>
    <string name="m110_audio_recording">Audio</string>
    <string name="m111_shot_lag">Shot Lag</string>
    <string name="m112_pir_sensitivity">PIR Sensitivity</string>
    <string name="m113_timelapse_start">Time Lapse Start Time</string>
    <string name="m114_timelapse_stop">Time Lapse Stop Time</string>
    <string name="m115_upload_frequency">Upload Frequency</string>
    <string name="m116_daily_sync_time">Daily Sync Time</string>
    <string name="m117_transmit_type">Upload Type</string>
    <string name="m118_loop_recording">Loop Recording</string>
    <string name="m119_info_stamp">Information Stamp</string>
    <string name="m120_time_format">Time Format</string>
    <string name="m121_time_zone">Time Zone</string>
    <string name="m122_temperature_format">Temperature Format</string>
    <string name="m123_lcd_during_on">LCD During ON</string>
    <string name="m124_Server_Date">Server Date</string>
    <string name="m125_Server_Time">Server Time</string>
    <string name="m126_Format_Card">Format SD Card</string>
    <string name="m127_cancel">Cancel</string>
    <string name="m128_read">Refresh</string>
    <string name="m129_question_list">Question List</string>
    <string name="m130_system_notification">System Notification</string>
    <string name="m131_question_wait">Wait reply</string>
    <string name="m132_question_aleady">Replied</string>
    <string name="m133_question_solved">Resolved</string>
    <string name="m134_send">Send</string>
    <string name="m135_input_message">Enter Reply Content</string>
    <string name="m136_input_title">Enter Title</string>
    <string name="m137_choose_camera">Select A Camera</string>
    <string name="m138_input_conten">Please Enter Detail Description</string>
    <string name="m139_question">Question</string>
    <string name="m140_selection">Selection</string>
    <string name="m141_take_photo">Take a photo</string>
    <string name="m142_choose_photos">Choose from photos</string>
    <string name="m143_request_permission">Request Permission</string>
    <string name="m144_camera_or_storage">Camera or storage</string>
    <string name="m145_content_cannot_empty">Content can not be empty</string>
    <string name="m146_must_smaller">Image must be smaller than 10MB</string>
    <string name="m147_problem_feedback">Problem feedback</string>
    <string name="m148_success">Success</string>
    <string name="m150_tips">Tips</string>
    <string name="m151_delete_question">Delete This Question?</string>
    <string name="m152_ok">OK</string>
    <string name="m153_operation_time">Operation Time</string>
    <string name="m154_operation_day">Operation Day</string>
    <string name="m155_operation_start_time">Operation Start Time</string>
    <string name="m156_operation_stop_time">Operation Stop Time</string>
    <string name="m157_time_lapse_start_interval">Time Lapse Interval</string>
    <string name="m158_message">Message</string>
    <string name="m159_message_allread">All Messages Read</string>
    <string name="m160_message_delete">Delete This Message</string>
    <string name="m161_camera_name">Camera Name</string>
    <string name="m162_requires_permission">App scan code requires shooting permission</string>
    <string name="m163_cannot_zero">Can not set to 0~</string>
    <string name="m164_cooming_soon">Cooming Soon…</string>
    <string name="m165_cannot_3s">Not less than 3 seconds</string>
    <string name="m166_information">Info</string>
    <string name="m167_delete_camera">Delete This Camera?</string>
    <string name="m168_update">Update</string>
    <string name="m169_latest">Latest</string>
    <string name="m170_ccid_num">ICCID Number</string>
    <string name="m171_device_model">Device Model</string>
    <string name="m172_fireware_version">Firmware Version</string>
    <string name="m173_modem_fireware_version">Modem Firmware Version</string>
    <string name="m174_last_update_time">Last Update Time</string>
    <string name="m175_modem_model">Modem Model</string>
    <string name="m176_by_email">Find Password By Email</string>
    <string name="m177_by_imei">Find Password By Camera IMEI</string>
    <string name="m178_find_password">Find Password</string>
    <string name="m179_first_name">First Name</string>
    <string name="m180_last_name">Last Name</string>
    <string name="m180_address">Address</string>
    <string name="m181_city">City</string>
    <string name="m182_save">Save</string>
    <string name="m183_mailing_information">Mailing  Information</string>
    <string name="m184_credti_card_information">Credit Card Information</string>
    <string name="m185_zip">Zip</string>
    <string name="m186_selected_country">Choose A country</string>
    <string name="m187_selected_state">select state</string>
    <string name="m188_country">Country</string>
    <string name="m189_mobile_number">Mobile Number</string>
    <string name="m190_same_as_mailing_address">Same as Mailing Address</string>
    <string name="m191_name_onhte_card">Name On The Card</string>
    <string name="m192_billing_address">Billing Address</string>
    <string name="m193_card_number">Card Number</string>
    <string name="m194_old_password">Old PassWord</string>
    <string name="m195_new_password">New PassWord</string>
    <string name="m196_new_password_comfir">Comfirm PassWord</string>
    <string name="m197_password_error">The passwords entered twice are inconsistent</string>
    <string name="m198_upgrade">Upgrade</string>
    <string name="m225_code">Get Code</string>
    <string name="m226_input_code">Enter the verification code</string>
    <string name="m244_choose_plans">Choose a Plan</string>
    <string name="m245_monthly">Monthly</string>
    <string name="m246_annual">Annual</string>
</resources>