<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/et_first_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_gravity="center"
        android:singleLine="true"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10"
        android:background="@drawable/shape_white_rect"
        android:gravity="center_vertical"
        android:hint="@string/m179_first_name"
        android:textColor="@color/color_text_66"
        android:paddingStart="@dimen/dp_10"
        android:textSize="@dimen/size_content_sp_14"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_last_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10"
        android:singleLine="true"
        android:background="@drawable/shape_white_rect"
        android:gravity="center_vertical"
        android:hint="@string/m180_last_name"
        android:textColor="@color/color_text_66"
        android:paddingStart="@dimen/dp_10"
        android:textSize="@dimen/size_content_sp_14"
        app:layout_constraintTop_toBottomOf="@+id/et_first_name" />


    <EditText
        android:id="@+id/et_address"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10"
        android:background="@drawable/shape_white_rect"
        android:gravity="center_vertical"
        android:hint="@string/m180_address"
        android:singleLine="true"
        android:textColor="@color/color_text_66"
        android:paddingStart="@dimen/dp_10"
        android:textSize="@dimen/size_content_sp_14"
        app:layout_constraintTop_toBottomOf="@+id/et_last_name" />


    <EditText
        android:id="@+id/et_address2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10"
        android:background="@drawable/shape_white_rect"
        android:gravity="center_vertical"
        android:hint="@string/m50_address2"
        android:singleLine="true"
        android:paddingStart="@dimen/dp_10"
        android:textColor="@color/color_text_66"
        android:textSize="@dimen/size_content_sp_14"
        app:layout_constraintTop_toBottomOf="@+id/et_address" />

    <EditText
        android:id="@+id/et_city"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_45"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10"
        android:background="@drawable/shape_white_rect"
        android:gravity="center_vertical"
        android:hint="@string/m181_city"
        android:singleLine="true"
        android:paddingStart="@dimen/dp_10"
        android:textSize="@dimen/size_content_sp_14"
        android:textColor="@color/color_text_66"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/v_state"
        app:layout_constraintTop_toBottomOf="@+id/et_address2" />


    <View
        android:id="@+id/v_state"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_45"
        android:layout_marginEnd="@dimen/dp_10"
        android:background="@drawable/shape_white_rect"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintLeft_toRightOf="@+id/et_city"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_city" />


    <TextView
        android:id="@+id/tv_states"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_10"
        android:text="@string/m47_state"
        app:layout_constraintBottom_toBottomOf="@+id/v_state"
        app:layout_constraintLeft_toLeftOf="@+id/v_state"
        app:layout_constraintTop_toTopOf="@+id/v_state" />


    <TextView
        android:id="@+id/tv_state_value"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:textColor="@color/color_text_66"
        android:textSize="@dimen/size_content_sp_14"
        android:text="@string/m187_selected_state"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="@+id/v_state"
        app:layout_constraintLeft_toRightOf="@+id/tv_states"
        app:layout_constraintRight_toLeftOf="@+id/iv_drop"
        app:layout_constraintTop_toTopOf="@+id/v_state" />


    <ImageView
        android:id="@+id/iv_drop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_10"
        android:src="@drawable/drop"
        app:layout_constraintBottom_toBottomOf="@+id/tv_states"
        app:layout_constraintRight_toRightOf="@+id/v_state"
        app:layout_constraintTop_toTopOf="@+id/tv_states" />


    <View
        android:id="@+id/v_country"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_45"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10"
        android:background="@drawable/shape_white_rect"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/et_zip"
        app:layout_constraintTop_toBottomOf="@+id/v_state"
        app:layout_constraintVertical_weight="3" />



    <TextView
        android:id="@+id/tv_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_10"
        android:textColor="@color/color_text_66"
        android:text="@string/m188_country"
        app:layout_constraintBottom_toBottomOf="@+id/v_country"
        app:layout_constraintLeft_toLeftOf="@+id/v_country"
        app:layout_constraintTop_toTopOf="@+id/v_country" />


    <TextView
        android:id="@+id/tv_country_value"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:textColor="@color/color_text_66"
        android:textSize="@dimen/size_content_sp_14"
        android:text="@string/m186_selected_country"
        app:layout_constraintBottom_toBottomOf="@+id/v_country"
        app:layout_constraintLeft_toRightOf="@+id/tv_country"
        app:layout_constraintRight_toLeftOf="@+id/iv_country_drop"
        app:layout_constraintTop_toTopOf="@+id/v_country" />


    <ImageView
        android:id="@+id/iv_country_drop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_10"
        android:src="@drawable/drop"
        app:layout_constraintBottom_toBottomOf="@+id/tv_country"
        app:layout_constraintRight_toRightOf="@+id/v_country"
        app:layout_constraintTop_toTopOf="@+id/tv_country" />





    <EditText
        android:id="@+id/et_zip"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_45"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10"
        android:background="@drawable/shape_white_rect"
        android:gravity="center_vertical"
        android:hint="@string/m185_zip"
        android:singleLine="true"
        android:textColor="@color/color_text_66"
        android:paddingStart="@dimen/dp_10"
        android:textSize="@dimen/size_content_sp_14"
        app:layout_constraintBottom_toBottomOf="@+id/v_country"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintLeft_toRightOf="@+id/v_country"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/v_country"/>


    <EditText
        android:id="@+id/et_mobile_number"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10"
        android:background="@drawable/shape_white_rect"
        android:gravity="center_vertical"
        android:hint="@string/m189_mobile_number"
        android:singleLine="true"
        android:paddingStart="@dimen/dp_10"
        android:textColor="@color/color_text_66"
        android:textSize="@dimen/size_content_sp_14"
        app:layout_constraintTop_toBottomOf="@+id/v_country" />






</androidx.constraintlayout.widget.ConstraintLayout>