<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toobar_title" />

    <TextView
        android:id="@+id/tv_custom_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:padding="@dimen/dp_10"
        android:text="@string/m54_change_password"
        android:textColor="@color/color_text_66"
        android:textSize="@dimen/size_content_sp_12"
        app:layout_constraintTop_toBottomOf="@+id/app_toolbar" />


    <LinearLayout
        android:id="@+id/ll_code"
        android:layout_width="@dimen/dp_300"
        android:layout_height="@dimen/dp_45"
        android:layout_marginTop="@dimen/dp_30"
        android:background="@drawable/shape_green_stroke"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_custom_service">


        <EditText
            android:id="@+id/et_olb_password"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_45"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@null"
            android:paddingStart="@dimen/dp_10"
            android:gravity="center_vertical"
            android:hint="@string/m226_input_code"
            android:textSize="@dimen/size_content_sp_12" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_getcode"
            android:layout_width="@dimen/dp_70"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="@drawable/selector_code_corner"
            android:gravity="center"
            android:maxLines="1"
            android:padding="@dimen/dp_3"
            android:text="@string/m225_code"
            android:textColor="@color/white"
            android:textSize="@dimen/size_content_sp_10"
            app:autoSizeMaxTextSize="@dimen/size_content_sp_10"
            app:autoSizeMinTextSize="6sp"
            app:autoSizeTextType="uniform" />


    </LinearLayout>


    <EditText
        android:id="@+id/et_new_password"
        android:layout_width="@dimen/dp_300"
        android:layout_height="@dimen/dp_45"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/shape_green_stroke"
        android:gravity="center_vertical"
        android:hint="@string/m195_new_password"
        android:inputType="textPassword"
        android:paddingStart="@dimen/dp_10"
        android:textSize="@dimen/size_content_sp_12"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_code" />

    <EditText
        android:id="@+id/et_newpassword_comfir"
        android:layout_width="@dimen/dp_300"
        android:layout_height="@dimen/dp_45"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/shape_green_stroke"
        android:gravity="center_vertical"
        android:hint="@string/m196_new_password_comfir"
        android:inputType="textPassword"
        android:paddingStart="@dimen/dp_10"
        android:textSize="@dimen/size_content_sp_12"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_new_password" />


    <Button
        android:id="@+id/btn_save"
        android:layout_width="@dimen/dp_250"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="@dimen/dp_50"
        android:layout_marginBottom="@dimen/dp_64"
        android:background="@drawable/selector_button_corner"
        android:minWidth="@dimen/dp_250"
        android:padding="@dimen/dp_5"
        android:text="@string/m182_save"
        android:textColor="@color/white"
        android:textSize="@dimen/size_title_sp_14"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_newpassword_comfir"
        app:layout_constraintVertical_bias="0.2" />


</androidx.constraintlayout.widget.ConstraintLayout>